feat: adjust contract with modelapi (#19)
* pass userId to modelApi and add proxy to modelapi

* remove table